# langchain-notebooklm

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  graph.py  human_loop.py  main.py  state.py  summariser.py  tools.py
