[project]
name = "notebooklm-mini"
version = "0.1.0"
description = "A miniature NotebookLM: LangChain agent that researches a topic, presents sources for human approval, and summarises the findings."
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-groq>=0.2",
    "langchain-community>=0.3",
    "langchain-tavily>=0.1",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
notebooklm = "src.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]  # src/ is on the path via uv
